syntax = "proto3";

package chat_service.model.v1;

option go_package = "chat-service/pkg/gen/go/api/model/v1;proto_chat_model";
import "google/protobuf/timestamp.proto";

message Chat {
  int64 id = 1;
  string name = 3;
}

message Message {
  int64 id  = 1;
  int64 chat_id  = 2;
  string sender_name  = 3;
  string text  = 4;
  int64 timestamp  = 5;
}
